fix color highlight in search with dark mode

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -2480,7 +2480,19 @@ table.docutils td, table.docutils th {
 
     a {
         mark {
-            @include link-green;
+			color: var(--search-mark-text);
+			text-decoration: none;
+
+			&:visited {
+				color: var(--link-color);
+			}
+
+			&:hover,
+			&:active,
+			&:focus {
+				color: var(--search-link-hover);
+				text-decoration: none;
+			}
             background-color: var(--secondary-accent);
         }
     }
@@ -2523,7 +2535,7 @@ table.docutils td, table.docutils th {
         margin-bottom: 30px;
         mark {
             background-color: var(--secondary-accent);
-            color: var(--body-fg);
+            color: var(--search-mark-text);
         }
     }
 }
